Fixed whitespace issue in textareas

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -26,12 +26,11 @@
     </section>
     <section>
       <h2>Drivers</h2>
-      <textarea
+      <textarea 
         id="drivers"
         placeholder="Write a drivers name on each line"
         rows="6"
-        cols="40">
-      </textarea>
+        cols="40"></textarea>
     </section>
     <section>
       <h2>Navigators</h2>
@@ -39,8 +38,7 @@
         id="navigators"
         placeholder="Write a navigators name on each line"
         rows="6"
-        cols="40">
-      </textarea>
+        cols="40"></textarea>
     </section>
     <script type="text/javascript">
       const { ipcRenderer } = require('electron');
