Added manual time entry and value limit to numbers

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -20,7 +20,7 @@
     </section>
     <section>
       <h2>Duration</h2>
-      <input type="text" readonly id="duration" value="7">
+      <input type="text" id="duration" value="7">
       <button type="button" id="shorterDuration">-</button>
       <button type="button" id="longerDuration">+</button>
     </section>
