--- a/mainWindow.html
+++ b/mainWindow.html
@@ -2,44 +2,81 @@
 <html lang="en">
   <head>
     <title>Mob timer</title>
+    <style>
+      body, html {
+        height: 100%;
+      }
+
+      body {
+        /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#180c35+0,323448+100 */
+        background: #180c35; /* Old browsers */
+        background: -moz-linear-gradient(top, #180c35 0%, #323448 100%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(top, #180c35 0%,#323448 100%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to bottom, #180c35 0%,#323448 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#180c35', endColorstr='#323448',GradientType=0 ); /* IE6-9 */
+        color: #fff;
+        font-family: Arial, sans-serif;
+        text-align: center;
+      }
+
+      .content {
+        width: 400px;
+        margin: 50px auto;
+      }
+
+      .inner-wrap {
+        text-align: left;
+      }
+    </style>
   </head>
   <body>
-    <h1>Mob timer</h1>
-    <section>
-      <h2>Get started</h2>
-      <div id="timer" style="font-size: 100px">00:00</div>
-      <div style="font-size: 30px">
-        Driver: <span id="driver"></span>
-      </div>
-      <div style="font-size: 30px">
-        Navigator: <span id="navigator"></span>
-      </div>
-      <button type="button" id="run" onclick="run()" style="font-size: 20px">Go!</button>
-      <button type="button" onclick="skipDriver()" style="font-size: 20px">Skip driver</button>
-      <button type="button" onclick="skipNavigator()" style="font-size: 20px">Skip navigator</button>
-    </section>
-    <section>
-      <h2>Duration</h2>
-      <input type="text" id="duration" value="7">
-      <button type="button" id="shorterDuration">-</button>
-      <button type="button" id="longerDuration">+</button>
-    </section>
-    <section>
-      <h2>Drivers</h2>
-      <textarea 
-        id="drivers"
-        placeholder="Write a drivers name on each line"
-        rows="6"
-        cols="40"></textarea>
-    </section>
-    <section>
-      <h2>Navigators</h2>
-      <textarea
-        id="navigators"
-        placeholder="Write a navigators name on each line"
-        rows="6"
-        cols="40"></textarea>
-    </section>
+    <div class="content">
+      <h1>Mob timer</h1>
+        <section>
+        <h2>Get started</h2>
+        <div id="timer" style="font-size: 100px">00:00</div>
+        <div class="inner-wrap">
+          <div style="font-size: 30px">
+            Driver: <span id="driver"></span>
+          </div>
+          <div style="font-size: 30px">
+            Navigator: <span id="navigator"></span>
+          </div>
+          <button type="button" id="run" onclick="run()" style="font-size: 20px">Go!</button>
+          <button type="button" onclick="skipDriver()" style="font-size: 20px">Skip driver</button>
+          <button type="button" onclick="skipNavigator()" style="font-size: 20px">Skip navigator</button>
+
+          <h2>Duration</h2>
+          <input type="text" id="duration" value="7">
+          <button type="button" id="shorterDuration">-</button>
+          <button type="button" id="longerDuration">+</button>
+        </div>
+        </section>
+        <section>
+          <div class="inner-wrap">
+            <h2>Drivers</h2>
+            <textarea 
+              id="drivers"
+              placeholder="Write a drivers name on each line"
+              rows="6"
+              cols="40"></textarea>  
+          </div>      
+        </section>
+        <section>
+          <button type="button" onclick="copyToNavigators()">Copy drivers to navigators</button>
+        </section>
+        <section>
+          <div class="inner-wrap">
+          <h2>Navigators</h2>
+          <textarea
+            id="navigators"
+            placeholder="Write a navigators name on each line"
+            rows="6"
+            cols="40"></textarea>
+          </div>
+        </section>
+      
+    </div>
     <script type="text/javascript">
       const { ipcRenderer } = require('electron');
 
@@ -67,6 +104,10 @@
 
       function skipNavigator() {
         roles.nextNavigator();
+      }
+
+      function copyToNavigators() {
+        
       }
     </script>
   </body>
