--- a/mainWindow.html
+++ b/mainWindow.html
@@ -4,7 +4,9 @@
     <title>Mob timer</title>
     <style>
       body, html {
-        height: 100%;
+        height: 100vh;
+        margin: 0;
+        padding: 0;
       }
 
       body {
@@ -21,15 +23,34 @@
 
       .content {
         width: 400px;
-        margin: 50px auto;
+        padding: 50px 0;
+        margin: 0 auto;
       }
 
       .inner-wrap {
         text-align: left;
       }
+
+      #timesup {
+        display: none;
+        width: 100%;
+        height: 100vh;
+        background: rgba(0,0,0,0.7);
+        position: absolute;
+        top: 0;
+        transition: opacity 0.3s ease-out;
+      }
+      #timesup span {
+        font-size: 150px;
+        padding-top: 45vh;
+        display: block;
+      }
     </style>
   </head>
   <body>
+    <div id="timesup">
+      <span>Time's up!</span>
+    </div>
     <div class="content">
       <h1>Mob timer</h1>
         <section>
@@ -86,15 +107,37 @@
       duration.init();
 
       function run() {
+        const timesUp = document.getElementById('timesup');
+        const buttons = document.getElementsByTagName('button');
+
         roles.initOnce();
         timer.run({
           duration: duration.getDuration(),
           callback: function() {
             roles.next();
-            ipcRenderer.send('time-has-elapsed', {});
+            timesUp.style.display = 'block';
+            timesUp.style.opacity = '1';
+            for (let i = 0; i < buttons.length; i++) {
+              buttons[i].disabled = true;
+            }
+            
+            ipcRenderer.send('time-has-elapsed', {});            
+            timesUp.removeEventListener('click', closeTimesUp);
+            timesUp.addEventListener('click', closeTimesUp);              
           }
         });
         ipcRenderer.send('timer-started', {});
+
+        function closeTimesUp() {
+          timesUp.style.opacity = '0';
+          setTimeout(function() {
+            timesUp.style.display = 'none';
+            for (let i = 0; i < buttons.length; i++) {
+              buttons[i].disabled = false;
+            }
+            document.getElementById('run').focus();
+          }, 300)
+        }
       }
 
       function skipDriver() {
