Fixes console warnings.

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -2,131 +2,11 @@
 <html lang="en">
   <head>
     <title>Mob timer</title>
-    <style>
-      body,
-      html {
-        height: auto;
-        margin: 0;
-        padding: 0;
-        min-height: 100vh;
-      }
-
-      body {
-        background: #3b4258; /* Old browsers */
-        background: -moz-linear-gradient(
-          top,
-          #3b4258 0%,
-          #222837 100%
-        ); /* FF3.6-15 */
-        background: -webkit-linear-gradient(
-          top,
-          #3b4258 0%,
-          #222837 100%
-        ); /* Chrome10-25,Safari5.1-6 */
-        background: linear-gradient(
-          to bottom,
-          #3b4258 0%,
-          #222837 100%
-        ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3b4258', endColorstr='#222837',GradientType=0 ); /* IE6-9 */
-        color: #fff;
-        font-family: Arial, sans-serif;
-        text-align: center;
-      }
-
-      h1 {
-        font-size: 42px;
-        text-transform: uppercase;
-        font-weight: 400;
-      }
-
-      button {
-        font-size: 18px;
-        border: none;
-        background: #616375;
-        color: #fff;
-        padding: 10px 30px;
-        border-radius: 5px;
-        font-weight: bold;
-      }
-
-      input,
-      textarea {
-        background: #fff;
-        border: none;
-        border-radius: 5px;
-        padding: 14px 20px;
-        vertical-align: top;
-      }
-
-      textarea {
-        margin-bottom: 20px;
-        width: 100%;
-        box-sizing: border-box;
-      }
-
-      #run {
-        width: 100%;
-        background: #ff5e63;
-        box-sizing: border-box;
-      }
-
-      .content {
-        width: 400px;
-        padding: 50px 0;
-        margin: 0 auto;
-      }
-
-      .inner-wrap {
-        text-align: left;
-      }
-
-      .button-wrap {
-        margin: 20px 0;
-        text-align: center;
-      }
-
-      .button-wrap button {
-        margin-bottom: 20px;
-      }
-
-      #timer {
-        box-shadow: inset 0px 0px 21px 0px rgba(0, 0, 0, 0.3);
-        border-radius: 10px;
-        font-size: 100px;
-        padding: 10px;
-        margin-bottom: 30px;
-        border: 1px solid rgba(117, 117, 117, 0.1);
-      }
-
-      #timesup {
-        display: none;
-        width: 100%;
-        height: 100vh;
-        background: rgba(0, 0, 0, 0.7);
-        position: absolute;
-        top: 0;
-        transition: opacity 0.3s ease-out;
-      }
-      #timesup span {
-        font-size: 150px;
-        padding-top: 45vh;
-        display: block;
-      }
-
-      .name-wrap {
-        font-size: 25px;
-        color: #ccc;
-        text-align: center;
-        text-transform: capitalize;
-      }
-
-      #driver,
-      #navigator {
-        font-size: 35px;
-        color: #fff;
-      }
-    </style>
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; script-src 'nonce-bm9uY2U='"
+    />
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
     <div id="timesup">
@@ -140,11 +20,9 @@
           <div class="name-wrap">Driver: <span id="driver"></span></div>
           <div class="name-wrap">Navigator: <span id="navigator"></span></div>
           <div class="button-wrap">
-            <button type="button" id="run" onclick="run()" disabled>Go!</button>
-            <button type="button" onclick="skipDriver()">Skip driver</button>
-            <button type="button" onclick="skipNavigator()">
-              Skip navigator
-            </button>
+            <button type="button" id="run" disabled>Go!</button>
+            <button type="button" id="skipDriver">Skip driver</button>
+            <button type="button" id="skipNavigator">Skip navigator</button>
           </div>
           <h2>Duration</h2>
           <input type="text" id="duration" value="7" />
@@ -164,7 +42,7 @@
         </div>
       </section>
       <section>
-        <button type="button" onclick="copyToNavigators()">
+        <button type="button" id="copyToNavigators">
           Copy drivers to navigators
         </button>
       </section>
@@ -180,12 +58,23 @@
         </div>
       </section>
     </div>
-    <script type="text/javascript">
+    <script type="text/javascript" nonce="bm9uY2U=">
       const { ipcRenderer } = require("electron");
 
+      const goButton = document.getElementById("run");
+      const skipDriverButton = document.getElementById("skipDriver");
+      const skipNavigatorButton = document.getElementById("skipNavigator");
+      const copyToNavigatorsButton = document.getElementById(
+        "copyToNavigators"
+      );
       const duration = require("./duration");
       const roles = require("./roles");
       const timer = require("./timer");
+
+      goButton.onclick = run;
+      skipDriverButton.onclick = skipDriver;
+      skipNavigatorButton.onclick = skipNavigator;
+      copyToNavigatorsButton.onclick = copyToNavigators;
 
       duration.init(formChanged);
       roles.init(formChanged);
@@ -193,7 +82,7 @@
       function run() {
         const timesUp = document.getElementById("timesup");
         const buttons = document.getElementsByTagName("button");
-        document.getElementById("run").disabled = true;
+        goButton.disabled = true;
 
         timer.run({
           duration: duration.getDuration(),
@@ -228,8 +117,6 @@
       }
 
       function formChanged() {
-        const goButton = document.getElementById("run");
-
         if (roles.isValid() && duration.isValid()) {
           goButton.disabled = false;
         } else {
